Extract each class to its own file

--- a/src/Pig/RenderingEngine/RenderingEngine.csproj
+++ b/src/Pig/RenderingEngine/RenderingEngine.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Element.cs" />
     <Compile Include="ElementData.cs" />
+    <Compile Include="Node.cs" />
+    <Compile Include="Node{T}.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Text.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
