Start implementing pretty printer

--- a/src/Pig/RenderingEngine.Tests/RenderingEngine.Tests.csproj
+++ b/src/Pig/RenderingEngine.Tests/RenderingEngine.Tests.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ElementDataTests.cs" />
+    <Compile Include="PrettyPrinterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
