--- a/src/Pig/RenderingEngine/RenderingEngine.csproj
+++ b/src/Pig/RenderingEngine/RenderingEngine.csproj
@@ -49,6 +49,7 @@
     <Compile Include="INodeVisitor.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Node{T}.cs" />
+    <Compile Include="PrettyPrinter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Text.cs" />
   </ItemGroup>
