--- a/src/Pig/RenderingEngine.Tests/packages.config
+++ b/src/Pig/RenderingEngine.Tests/packages.config
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Fixie" version="1.0.0.3" targetFramework="net46" />
+  <package id="NUnit" version="3.0.0-alpha-5" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.1.32-beta" targetFramework="net45" />
-  <package id="xunit" version="2.0.0-beta5-build2785" targetFramework="net45" />
-  <package id="xunit.abstractions" version="2.0.0-beta5-build2785" targetFramework="net45" />
-  <package id="xunit.assert" version="2.0.0-beta5-build2785" targetFramework="net45" />
-  <package id="xunit.core" version="2.0.0-beta5-build2785" targetFramework="net45" />
-  <package id="xunit.runners" version="2.0.0-beta5-build2785" targetFramework="net45" />
 </packages>
